@@ -1,5 +1,7 @@
 2002-10-13  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/libnr/have_mmx.S: New file (copied from gdk-pixbuf)
+
 	* configure.in (use_mmx_asm): Check for mmx
 
 	* src/libnr/nr-compose.c (nr_R8G8B8A8_P_R8G8B8A8_P_A8_RGBA32): Use mmx if present
